<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_threading"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/threadingnothreading_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_fix"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/threadingsimple_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_on_ui_thread"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/threadingrunonuithread_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_post"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/threadingviewpost_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asynctask"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/threadingasynctask_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handler_messages"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/handler_messages_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handler_runnables"
        android:onClick="buttonPressed"
        android:layout_gravity="center_horizontal"
        android:id="@+id/handler_runnables_button"/>

</LinearLayout>
